--- a/Doujin/Doujin.csproj
+++ b/Doujin/Doujin.csproj
@@ -66,6 +66,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TaskUI.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="TaskUI.Designer.cs">
+      <DependentUpon>TaskUI.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -74,6 +80,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="TaskUI.resx">
+      <DependentUpon>TaskUI.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
