--- a/Doujin/Doujin.csproj
+++ b/Doujin/Doujin.csproj
@@ -126,6 +126,12 @@
   <ItemGroup>
     <None Include="Resources\blue0517.jpg" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\search_icon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\search_icon_2.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
